5-Route.tf
# Private Route Table
# Routes traffic from private subnets to the NAT gateway
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.nasty-vpc.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nasty-nat.id

  }


  tags = {
    Name = "nasty-private-rt"
    Type = "private"
  }
}

# Public Route Table
# Routes traffic from public subnets to the internet gateway
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.nasty-vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id

  }

  tags = {
    Name = "devonaoki-public-rt"
    Type = "public"
  }
}

resource "aws_route_table_association" "private-eu-west-3a" {
  subnet_id      = aws_subnet.private-eu-west-3a.id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "private-eu-west-3b" {
  subnet_id      = aws_subnet.private-eu-west-3b.id
  route_table_id = aws_route_table.private.id
}
resource "aws_route_table_association" "private-eu-west-3c" {
  subnet_id      = aws_subnet.private-eu-west-3c.id
  route_table_id = aws_route_table.private.id
}


#public

resource "aws_route_table_association" "public-eu-west-3a" {
  subnet_id      = aws_subnet.public-eu-west-3a.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public-eu-west-3b" {
  subnet_id      = aws_subnet.public-eu-west-3b.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public-eu-west-3c" {
  subnet_id      = aws_subnet.public-eu-west-3c.id
  route_table_id = aws_route_table.public.id
}
